[tool.poetry]
name = "onion"
version = "1.0.0"
description = "Ionosphere simulation for global 21 cm experiments"
authors = ["lap1dem <vadym.bidula@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lap1dem/onion"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"

numpy = [
    {version = "^1.21", python = "~3.7"},
    {version = "^1.22", python = "^3.8"},
]
h5py = "^3.6.0"
pymap3d = "^2.8.0"
tqdm = "^4.64.0"
scipy = [
    {version = "^1.7", python = "~3.7"},
    {version = "^1.8", python = "^3.8"},
]
matplotlib = "^3.5.2"
mpi4py = "^3.1.3"
pytz = "^2022.1"
it = "^1.0.0"
jupyter = "^1.0.0"
healpy = "^1.15.2"
ffmpeg-progress-yield = "^0.2.0"
iricore = "^1.0.5"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.1"


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
basemap = "^1.3.2"
PyQt5 = "^5.15.6"
Sphinx = "^5.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
