[tool.poetry]
name = "dionpy"
version = "2.0.0"
description = "Dynamic ionosphere model for global 21 cm experiments"
authors = ["Vadym Bidula <vadym.bidula@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vbidula/dionpy"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.14"


#[tool.poetry.extras]
#numba = ["numba"]
numpy = "^1.26.4"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.1"
sphinxcontrib-bibtex = "^2.5.0"
sphinxcontrib-video = "^0.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
#PyQt5 = "^5.15.6"
#PyYAML = "^6.0"
#qrcode = {extras = ["pil"], version = "^7.3.1"}
#unlzw = "^0.1.1"
#cartopy = "^0.21.1"
#shapely = "^2.0.1"
#setuptools = "^68.0.0"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
